--- a/main.css
+++ b/main.css
@@ -780,7 +780,7 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(320, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, pink 50%, transparent 50%, transparent);
   -webkit-mask-image: linear-gradient(to bottom right, pink 50%, transparent 50%, transparent);
   mask-image: linear-gradient(to bottom right, pink 50%, transparent 50%, transparent);
 }
@@ -1318,4 +1318,5 @@ body {
 .container * {
   -webkit-animation-play-state: paused !important;
           animation-play-state: paused !important;
+
 }/*# sourceMappingURL=main.css.map */
