--- a/serr.css
+++ b/serr.css
@@ -23,7 +23,7 @@ body {
 
 p{
   cursor: pointer;
-    font-size: 100px
+    font-size: 100px;
     background-color: rgb(255, 255, 255);
    box-shadow: 0 0 90px 5px rgb(255, 4, 155);
     border: 3px solid rgba(244, 0, 159, 0.436);
@@ -51,5 +51,6 @@ h1{
   margin-left: 1.5rem;
 
 }
+
 
 
